--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,27 @@ body {
 
   background-color: #ffffff;
 }
+/*
+* {
+  outline: 1px solid black
+} */
 
 a {
   text-decoration: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  height: 1px; width: 1px;
+  margin: -1px; padding: 0; border: 0;
+}
+
+
 .inner {
   width: 1200px;
   margin: 0 auto;
-
 }
 
 .button {
@@ -74,25 +86,38 @@ a {
 
 .site-navigation {
   display: flex;
+  flex-wrap: wrap;
   flex-grow: 1;
+
 
   margin: 0;
   padding: 0;
-  padding: 0 70px;
+
 
   list-style: none;
   text-align: left;
 }
 
 .site-navigation__item {
-  width: 240px;
+  box-sizing: border-box;
+  width: 25%;
 }
 
-.site-navigation__item:nth-child(3) {
-  margin-left: auto;
+.site-navigation__item:nth-child(4n-3) {
+  padding-left: 6%;
 }
 
-.site-navigation__item_align_text {
+.site-navigation__item:nth-child(4n-2) {
+  padding-left: 1%;
+}
+
+.site-navigation__item:nth-child(4n-1) {
+  padding-right: 1%;
+  text-align: right;
+}
+
+.site-navigation__item:nth-child(4n) {
+  padding-right: 6%;
   text-align: right;
 }
 
@@ -123,6 +148,7 @@ a {
 }
 
 .features__column {
+  margin: 0 auto;
   width: 575px;
 }
 
@@ -150,11 +176,26 @@ a {
 }
 
 .features-list__item {
-  width: 400px;
+  width: 33.33%;
 
 /* Временно для сетки */
   min-height: 255px;
 /* Временно для сетки */
+}
+
+.features-list__item_blue {
+  display: flex;
+  width: 100%;
+
+  background-color: #81b3d2;
+}
+
+.features-list__column {
+  width: 33.33%;
+}
+
+.features-list__column_size_m {
+  width: 66.66%;
 }
 
 .features-list__title {
@@ -163,18 +204,11 @@ a {
   font-weight: 700;
 }
 
-.features-list__item_blue {
-  display: flex;
-  width: 1200px;
-
-  background-color: #81b3d2;
-}
-
 .features-list__text_white {
   color: #ffffff;
 }
 
-.features-list__column_image {
+.features-list__column_order {
   order: -1;
 }
 
@@ -242,6 +276,7 @@ a {
 
 .modal-form__column {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -382,7 +417,8 @@ a {
 .search-hotels {
   /* Временно для сетки */
   min-height: 215px;
-  padding: 0 70px;
+  padding-left: 6%;
+  padding-right: 6%;
   /* Временно для сетки */
 
   color: #ffffff;
@@ -402,15 +438,15 @@ a {
 
 .search-hotels__columns {
   display: flex;
-
+  flex-wrap: wrap;
 }
 
 .search-hotels__column {
-  width: 255px;
+  width: 24%;
 }
 
 .search-hotels__column_right {
-  width: 330px;
+  width: 31%;
   margin-left: auto;
 
   text-align: right;
@@ -451,6 +487,7 @@ a {
 
 .found-hotels__column-form {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .found-hotels__results-text {
@@ -480,10 +517,12 @@ a {
 
 .found-hotels__sorting-columns {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .found-hotels__sorting-column {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .found-hotels__sorting-column_right {
@@ -521,8 +560,8 @@ a {
 }
 
 .found-hotels-list__item {
-
   display: flex;
+  flex-wrap: wrap;
 }
 
 .found-hotels-list__image {
