--- a/css/style.css
+++ b/css/style.css
@@ -70,18 +70,14 @@ a {
   font-weight: 700;
   color: #000000;
   background-color: #ffffff;
-
-  /* Временно для сетки */
-  min-height: 55px;
-    /* Временно для сетки */
 }
-
 
 .main-header__logo {
   position: absolute;
   top: 0;
   left: 50%;
   margin-left: -69px;
+  z-index: 10;
 }
 
 .site-navigation {
@@ -101,7 +97,11 @@ a {
 .site-navigation__item {
   box-sizing: border-box;
   width: 25%;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
+
+
 
 .site-navigation__item:nth-child(4n-3) {
   padding-left: 6%;
@@ -137,7 +137,10 @@ a {
 
 /* ======================================= */
 
-.container__image {
+.container__box-image {
+  position: relative;
+  margin: 0;
+  margin-bottom: 60px;
   min-height: 508px;
 
   background-color: #bad5e6;
@@ -147,12 +150,25 @@ a {
   background-repeat: no-repeat;
 }
 
+.container__image {
+  position: absolute;
+  top: 75px;
+  left: 50%;
+  margin-left: -229px;
+}
+
+
 .features__column {
   margin: 0 auto;
+  margin-bottom: 50px;
+
   width: 575px;
 }
 
 .features__slogan {
+  margin: 0;
+  margin-bottom: 30px;
+
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -160,6 +176,8 @@ a {
 }
 
 .features__subtitle {
+  margin: 0;
+
   line-height: 26px;
 }
 
@@ -177,6 +195,7 @@ a {
 
 .features-list__item {
   width: 33.33%;
+  box-sizing: border-box;
 
 /* Временно для сетки */
   min-height: 255px;
@@ -194,14 +213,57 @@ a {
   width: 33.33%;
 }
 
+.features-list__column_text {
+  padding-top: 45px;
+  padding-right: 5%;
+  padding-bottom: 60px;
+  padding-left: 5%;
+}
+
 .features-list__column_size_m {
+  line-height: 0;
   width: 66.66%;
 }
 
 .features-list__title {
+  margin: 0;
+  margin-bottom: 25px;
+
   color: #000000;
   font-size: 21px;
   font-weight: 700;
+}
+
+.features-list__number {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.features-list__number:before {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  top: 10px;
+  left: -15px;
+  width: 9px;
+  height: 2px;
+  background-color: #ffffff;
+}
+
+.features-list__number:after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  top: 10px;
+  right: -15px;
+  width: 10px;
+  height: 2px;
+  background-color: #ffffff;
+}
+
+.features-list__text {
+  margin: 0;
 }
 
 .features-list__text_white {
